melhorias no graphql
